append swagger documentation
